# ROAR

./: .gitignore  readme.md
gui/: CMakeLists.txt  Makefile  bridge.cpp  bridge.h  main.cpp  main.qml  plot3D.qml  resources.qrc
include/core/: matrix.h
include/factory/: loss_factory.h  model_factory.h  optimizer_factory.h
include/losses/: loss.h  mae.h  mse.h
include/models/: model.h
include/models/supervised/: linear_regression.h  supervised_model.h
include/models/unsupervised/: unsupervised_model.h
include/optimizers/: adam.h  optimizer.h  sgd.h
src/: Makefile  main.cpp  tempCodeRunnerFile.cpp
src/core/: matrix.cpp
src/losses/: mae.cpp  mse.cpp
src/models/supervised/: linear_regression.cpp
src/optimizers/: adam.cpp  sgd.cpp
